test_regress/t/t_var_ref_bad3.out
%Error-UNSUPPORTED: t/t_var_ref_bad3.v:11:13: Unsupported: ref/const ref as primary input/output: 'bad_primary_ref'
   11 |     ref int bad_primary_ref
      |             ^~~~~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
